--- a/This is Jin/css/tooplate-style.css
+++ b/This is Jin/css/tooplate-style.css
@@ -1,4 +1,3 @@
-/*
 
 Template 2087 Kalay
 
@@ -213,7 +212,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  background: url('../images/home-bg.jpg') 50% 0 repeat-y fixed;
+  background: url('../images/header_bg.jpg') 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
   display: -webkit-box;
