--- a/This is Jin/css/tooplate-style.css
+++ b/This is Jin/css/tooplate-style.css
@@ -212,7 +212,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  background: url('../images/header_bg.jpg') 50% 0 repeat-y fixed;
+  background: url('../images/optimistic.jpg') 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
   display: -webkit-box;
@@ -388,7 +388,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 footer {
-  background: #7682cc;
+  background: #000000;
   text-align: center;
   padding: 120px 0;
 }
